# compehndly

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  format.yml  publish.yml  tests.yml
R/: DESCRIPTION  README.md
R/R/: derived_variables.R
R/tests/: testthat.R
R/tests/testthat/: helper-conformance.R  test-bin-decoding.R  test-conformance.R
docs/: index.md
docs/python/: contributing.md  functions.md  index.md  integration.md  usage.md
docs/r/: functions.md  index.md  integration.md  usage.md
docs/shared/: conformance.md
python/: Makefile  README.md  pyproject.toml
python/src/compehndly/: __init__.py  api.py  entrypoints.py
python/src/compehndly/adapters/: __init__.py
python/src/compehndly/core/: registry.py
python/src/compehndly/derived_variables/: correction.py  imputation.py  multiplication.py  statsutils.py  summation.py
python/src/compehndly/polars/: __init__.py  adapters.py  kernels.py
python/src/compehndly/utils/: bins.py
python/tests/: conftest.py  test_adapters.py  test_conformance_shared_vectors.py  test_dataframe_integration.py  test_polars_integration.py  test_registry.py
python/tests/derived_variables/: test_correction.py  test_imputation.py  test_multiplication.py  test_summation.py
python/tests/utils/: test_bins.py
shared/conformance/: README.md  derived_variables_cases.json
