[project]
name = "compehndly"
version = "0.0.1"
description = "Personal Exposure Health Registry"
readme = "README.md"
authors = [
    { name = "Gertjan Bisschop", email = "gertjan.bisschop@vito.be" },
    { name = "Caio Mescouto", email = "caio.mescouto@vito.be" },
]
requires-python = ">=3.10, <4.0.0"
dependencies = [
	"polars>=1.0, < 2.0",
	"scipy",
]

[dependency-groups]
test = [
    "pytest>=8.2.0,<9",
	"polars>=1.0, < 2.0"
]

dev = [
    "ruff>=0.4.4,<0.5",
    "black",
    "mypy",
    "isort",
    "pytest-cov>=7.0.0",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[project.optional-dependencies]
test = [
    "polars>=1.0,<2.0",
]


[tool.hatch.build.targets.sdist]
include = [
    "src/compehndly/",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/compehndly/",
	"src/compehndly/py.typed",
]


[tool.hatch.build.targets.wheel.sources]
"src/compehndly" = "compehndly"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = [
    "--import-mode=importlib",
]
markers = [
	"base: base functionality",
	"conformance: shared cross-language conformance tests",
	"integration: testing polars integration",
	"derived: testing derived variables",
]

[tool.ruff]
# Same as Black.
line-length  = 79
indent-width = 4

# Assume Python 3.11
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
	".bzr",
	".direnv",
	".eggs",
	".git",
	".git-rewrite",
	".hg",
	".ipynb_checkpoints",
	".mypy_cache",
	".nox",
	".pants.d",
	".pyenv",
	".pytest_cache",
	".pytype",
	".ruff_cache",
	".svn",
	".tox",
	".venv",
	".vscode",
	"__pypackages__",
	"_build",
	"buck-out",
	"build",
	"dist",
	"node_modules",
	"site-packages",
	"venv",
]


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable   = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
